# DocChat

./: .gitignore  CLAUDE.md  README.md  app.py  main.py  pyproject.toml  requirements.txt  template.py
api/: dependencies.py  main.py  router.py  schemas.py
docs/: architecture.md  skills.md  state.md  workflow.md
src/a2a/: client.py  server.py
src/agents/: answer_grader.py  query_rewriter.py  reflexion_agent.py  relevance_checker.py  research_agent.py  state.py  verfication_agent.py  web_search_agent.py  workflow.py
src/config/: constants.py  settings.py
src/custom_logger/: logger.py
src/document_processor/: file_handler.py
src/retriever/: builder.py
src/tools/: mcp_client.py  mcp_tools.py
tests/: test_answer_grader.py  test_builder.py  test_file_handler.py  test_mcp_tools.py  test_query_rewriter.py  test_reflexion_agent.py  test_relevance_checker.py  test_research_agent.py  test_verification_agent.py  test_workflow.py
